tests/invalid/Array_Invalid_4.whiley
public export method test():
    int x = 1
    int y = x[0]
